--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Dining,Adda,Entertainment</h1>
     <section class="food-display">
         <div class="half-width">
             <h2><span class="orange-color">Follow</span> The Diet,</h2>
@@ -20,12 +19,12 @@
             <a class="link-button" target="_blank" href=" ">Order Food</ a>
         </div>
         <div class="half-width">
-            < img src="images/female7872_preview-removebg-preview.png" alt="">
+            < img src="images/male/first.png alt="">
         </div>
     </section>
     <section class="food-display background-img">
         <div class="half-width">
-            < img src="images/male/31602633-happy-man-with-unhealthy-burger-sandwich-in-hand-get-ready-to-eat-isolated-on-a-white-background-fas-removebg-preview.png" alt="">
+            < img src="images/male/second.png" alt="">
         </div>
         <div class="half-width">
             <h2>About Me</h2>
