--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
             <a class="link-button" target="_blank" href=" ">Order Food</ a>
         </div>
         <div class="half-width">
-            < img src="images/male/first.png alt="">
+             <img src="images/male/31602633-happy-man-with-unhealthy-burger-sandwich-in-hand-get-ready-to-eat-isolated-on-a-white-background-fas-removebg-preview.png" alt="">
         </div>
     </section>
     <section class="food-display background-img">
         <div class="half-width">
-            < img src="images/male/second.png" alt="">
+             <img src="second.png" alt="">
         </div>
         <div class="half-width">
             <h2>About Me</h2>
@@ -39,20 +39,20 @@
         </div>
         <div class="food-display">
             <div class="one-third">
-                < img src="images/food/Project Cover5.png" alt="">
+                 <img src="images/food/Project Cover5.png" alt="">
                 <h4 class="content-justifi">Recipie Title</h4>
                 <p class="content-justifi">This manaul pasta make is the easiest way to satisfy forazen craving
                 This salad make is the easiest way to satisfy craving in</p >
                 
             </div>
             <div class="one-third">
-                < img src="images/food/Project Cover7.png" alt="">
+                 <img src="images/food/Project Cover7.png" alt="">
                 <h4 class="content-justifi">Recipie Title</h4>
                 <p class="content-justifi">This manaul pasta make is the easiest way to satisfy forazen craving</p >
                 
             </div>
             <div class="one-third">
-                < img src="images/food/Project Cover8.png" alt="">
+                 <img src="images/food/Project Cover8.png" alt="">
                 <h4 class="content-justifi">Recipie Title</h4>
                 <p class="content-justifi">This manaul pasta make is the easiest way to satisfy forazen craving
                 This pizza making to very easy pizza bread souce chichken and you want some another things</p >
@@ -76,7 +76,7 @@
     </section>
     <footer class="last-part">
         <h2><span class="orange-color">FOOD</span> LOVER</h2>
-        <h3>Eat healthy,Live healthy to the happy</h3>
+        <h4>Eat healthy,Live healthy to the happy</h4>
     </footer>
 </body>
 </html>
